<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyListDetail">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@drawable/toolbar_bg"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        tools:ignore="MissingConstraints"
        android:theme="@style/MyThemeOverlay_Toolbar2"
       >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit My List"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_marginTop="60dp"
        android:id="@+id/ivMovieIdMyListDetail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:padding="@dimen/_7sdp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMovieNameIdMyListDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="12dp"
        android:text="@string/name"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvRatingIdMyListDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMovieIdMyListDetail"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRatingIdMyListDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="25dp"
        android:text="5.0"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMovieIdMyListDetail"
        tools:ignore="MissingConstraints" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:text="/"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMovieIdMyListDetail"
        tools:ignore="MissingConstraints"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="5dp"
        android:text="10"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMovieIdMyListDetail"
        tools:ignore="MissingConstraints"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMovieDescriptionIdMyListDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:text="@string/title"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieNameIdMyListDetail" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/yourData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="You details"
        android:textSize="@dimen/_14ssp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieDescriptionIdMyListDetail"
        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMovieWatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/watch_this_movie"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@+id/yourData"
        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Switch
        android:id="@+id/switchButtonUpdateData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourData"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <RatingBar
        android:id="@+id/myRatingMyList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieWatch"
        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:numStars="5"
        android:stepSize="0.5"
        android:progressTint="@color/color_Primary"
        />

        <EditText
        android:id="@+id/tvCommentMyListDetail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/myRatingMyList"
        android:background="@drawable/edittext_bg"
        android:hint="@string/comments"
        android:inputType="textCapSentences"
        android:textColor="@color/black"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        />
    <Button
        android:id="@+id/btnEditMyListData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:padding="15dp"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCommentMyListDetail"
        app:layout_constraintWidth_percent=".5" />

</androidx.constraintlayout.widget.ConstraintLayout>