<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/myListmovie_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/get_rating"
            app:layout_constraintStart_toEndOf="@+id/myListmovie_image"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/ivDeleteMovieId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_delete_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/get_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="20dp"
            android:text="@string/_5_0"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDeleteMovieId" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="15dp"
            android:text="/"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDeleteMovieId" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="10"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDeleteMovieId" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="@+id/get_rating"
            app:layout_constraintStart_toEndOf="@id/myListmovie_image"
            app:layout_constraintTop_toBottomOf="@+id/movie_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/watchMovie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="Watched Movie ?"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="@+id/watchYesorNo"
            app:layout_constraintStart_toEndOf="@id/myListmovie_image"
            app:layout_constraintTop_toBottomOf="@+id/movie_description" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/watchYesorNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="Yes"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/watchMovie" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/yourRatingTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="Your Ratings"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="@+id/tv_MyRating"
            app:layout_constraintStart_toEndOf="@id/myListmovie_image"
            app:layout_constraintTop_toBottomOf="@+id/watchMovie" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_MyRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="3.5"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/yourRatingTxt" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvYourComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="Your Comment"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/myListmovie_image"
            app:layout_constraintTop_toBottomOf="@+id/yourRatingTxt" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
